# diesel-derive-newtype

./: .gitignore  .travis.sh  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  release.toml
.github/workflows/: test.yml
src/: domain.rs  lib.rs
tests/: compile-weird-diesel-imports.rs  db-roundtrips.rs  db_roundrips.rs  domain-type-exp.rs  domain-type.rs  it_builds.rs  should-not-compile.rs  traits.rs  weird-diesel-imports.rs
