[package]
name = "diesel-derive-newtype"
version = "1.0.1"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
license = "Apache-2.0/MIT"
readme = "README.md"
categories = ["database", "rust-patterns"]
keywords = ["newtype", "derive"]
description = "Automatically connect newtypes to Diesel using their wrapped type"
repository = "https://github.com/quodlibetor/diesel-derive-newtype"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
proc-macro2 = "1.0.51"
syn = "1.0.109"
quote = "1.0.23"

[dev-dependencies]
diesel = { version = "1", features = ["sqlite"] }

[lib]
proc-macro = true
# required by cargo-readme until this is merged:
# https://github.com/livioribeiro/cargo-readme/pull/16
path = "src/lib.rs"
