[package]
name = "diesel-derive-newtype"
version = "2.0.0"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
categories = ["database", "rust-patterns"]
description = "Automatically connect newtypes to Diesel using their wrapped type"
edition = "2018"
keywords = ["newtype", "derive"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/quodlibetor/diesel-derive-newtype"
# Inherited MSRV of `syn`.
rust-version = "1.56"

[dependencies]
proc-macro2 = "1.0.51"
syn = "2.0.10"
quote = "1.0.23"

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
diesel = { version = "~ 2.0.0", features = ["sqlite"] }

[lib]
proc-macro = true
# required by cargo-readme until this is merged:
# https://github.com/livioribeiro/cargo-readme/pull/16
path = "src/lib.rs"
